--- a/indexnow.json
+++ b/indexnow.json
@@ -1,6 +1,6 @@
 {
-    "host": "all-day-slimming-tea.vercel.app",
+    "host": "get-prostadine.vercel.app",
     "key": "kkrabc123xyz",
-    "keyLocation": "https://all-day-slimming-tea.vercel.app/indexnow.json"
+    "keyLocation": "https://get-prostadine.vercel.app/indexnow.json"
   }
   
